# book-narrator

agent-master/: .env.example  .gitignore  README.md  api_main.py  main.py  requirements.txt  test_pdf_gemma_narrator.py
agent-master/debug_prompts/: 20260510_174136_短视频_first.txt  20260510_180010_短视频_first.txt  20260510_180115_短视频_first.txt  20260510_181037_短视频_first.txt  20260511_143400_短视频_first.txt  20260511_151210_短视频_first.txt  20260511_183959_短视频_first.txt  20260511_184048_短视频_first.txt  20260511_185850_短视频_first.txt  20260512_180657_短视频_first.txt  (+34 more)
backend-feature2.1_副本/: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend-feature2.1_副本/app/: main.py
backend-feature2.1_副本/app/api/: router.py
backend-feature2.1_副本/app/api/routes/: agent.py  agent.py.bak_fix_output_language_20260516_152607  agent.py.bak_fix_task_instruction_language_20260516_160016  agent.py.bak_prompt_language_20260516_154026  meta.py  narration_history.py
backend-feature2.1_副本/app/core/: config.py
backend-feature2.1_副本/app/db/: session.py
backend-feature2.1_副本/app/models/: __init__.py  agent.py  common.py  dataset.py  eval.py  narration_task.py
backend-feature2.1_副本/app/schemas/: agent.py  common.py  narration_task.py
backend-feature2.1_副本/app/services/: agent_client.py  audio_service.py  pdf_reader.py  remote_uploader.py
backend-feature2.1_副本/output/: narration_history.json
backend-feature2.1_副本/tests/: test_health.py
book-commentary-frontend-rebuild/: index.html  package-lock.json  package.json  tsconfig.json
(+34 files in other folders)
